이미지 경로 오류 수정